--- a/app/src/main/res/layout/item_input.xml
+++ b/app/src/main/res/layout/item_input.xml
@@ -44,7 +44,7 @@
         android:text="-"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:background="@drawable/background"
+        android:background="@drawable/bg"
         app:layout_constraintEnd_toStartOf="@id/txtQty"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -57,7 +57,7 @@
         android:text="0"
         android:textSize="16sp"
         android:inputType="number"
-        android:background="@null"
+        android:background="@drawable/bg"
         android:padding="0dp"
         app:layout_constraintEnd_toStartOf="@id/btnPlus"
         app:layout_constraintTop_toTopOf="parent"
@@ -70,7 +70,7 @@
         android:text="+"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:background="@drawable/background"
+        android:background="@drawable/bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
