--- a/app/src/main/res/layout/donation_details.xml
+++ b/app/src/main/res/layout/donation_details.xml
@@ -18,12 +18,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/dongle"
-            android:text="INPUT INFORMATION"
+            android:text="Input Information"
             android:textColor="@android:color/black"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/separatorLine"
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:background="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtHeader" />
 
         <TextView
             android:id="@+id/txtStep"
@@ -31,8 +43,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/dongle"
             android:text="Step 2"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/txtHeader"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/txtHeader" />
@@ -44,64 +56,62 @@
             android:layout_marginTop="20dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
-            app:layout_constraintTop_toBottomOf="@id/txtHeader">
+            app:layout_constraintTop_toBottomOf="@id/separatorLine"> <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="15dp">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:id="@+id/detailsImage"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_food"
-                        android:layout_marginEnd="10dp"
-                        android:background="@drawable/bg"
-                        android:padding="5dp"/>
-
-                    <TextView
-                        android:id="@+id/detailsTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/dongle"
-                        android:text="FOOD"
-                        android:textColor="@android:color/black"
-                        android:textSize="32sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/detailsStatus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:background="@drawable/status_red"
-                        android:fontFamily="@font/dongle"
-                        android:paddingStart="8dp"
-                        android:paddingTop="2dp"
-                        android:paddingEnd="8dp"
-                        android:paddingBottom="2dp"
-                        android:text="Critical"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="13sp" /> </LinearLayout>
+                <ImageView
+                    android:id="@+id/detailsImage"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_food"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/bg"
+                    android:padding="5dp"/>
 
                 <TextView
-                    android:id="@+id/detailsDescription"
-                    android:layout_width="match_parent"
+                    android:id="@+id/detailsTitle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/dongle_light"
-                    android:text="Rice, noodles, and canned goods for nourishment."
-                    android:textSize="14sp" />
-            </LinearLayout>
+                    android:fontFamily="@font/dongle"
+                    android:text="FOOD"
+                    android:textColor="@android:color/black"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/detailsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:background="@drawable/status_red"
+                    android:fontFamily="@font/dongle"
+                    android:paddingStart="8dp"
+                    android:paddingTop="2dp"
+                    android:paddingEnd="8dp"
+                    android:paddingBottom="2dp"
+                    android:text="Critical"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="13sp" /> </LinearLayout>
+
+            <TextView
+                android:id="@+id/detailsDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/dongle_light"
+                android:text="Rice, noodles, and canned goods for nourishment."
+                android:textSize="14sp" />
+        </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
