--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,34 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_marginEnd">8dp</item>
     </style>
+    <style name="AmountButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:backgroundTint">#FFE0B2</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+
+        <item name="cornerRadius">8dp</item>
+
+        <item name="android:minHeight">50dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+    </style>
+    <style name="OtpBoxStyle">
+        <item name="android:layout_width">45dp</item>
+        <item name="android:layout_height">55dp</item>
+        <item name="android:layout_margin">4dp</item> <item name="android:background">@drawable/bg_otp_box</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/dongle</item>
+
+        <item name="android:gravity">center</item> <item name="android:inputType">number</item>
+        <item name="android:maxLength">1</item> <item name="android:includeFontPadding">false</item>
+    </style>
     <style name="ProfileDetailLabel" parent="android:Widget.TextView">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@android:color/darker_gray</item>
